--- a/res1.tex
+++ b/res1.tex
@@ -18,20 +18,25 @@
                                   
 \begin{resume}
 
-\section{JOB OBJECTIVE}          
-	A summer position that will use my technological and analytical skills while granting me the industry experience critical to my professional growth.
-\section{EDUCATION}          
+\vspace{-10pt}\section{JOB OBJECTIVE}          
+	A serious software-engineering position to make use of my skills in performant languages
+  and data management tools. 
+\vspace{-10pt}\section{EDUCATION}          
     Purdue University, West Lafayette, IN \\ 
     Bachelor in Electrical and Computer Engineering, May 2020   \\       
-	GPA: N/A (First Semester) \\
-    Minor in Chemistry\\   
-	Westfield High School, Westfield, IN \\
-	Academic Honors Diploma, June 2017 \\
-	GPA: 4.23 \\
+	GPA: 3.8 \\
  
-\section{EXPERIENCE}
+\vspace{-20pt}\section{EXPERIENCE}
    \vspace{-0.1in}	
 	\begin{tabbing}
+   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
+    {\bf Intern} \>DemandJump \>Summer 2018 - Present \\
+                             \>Indianapolis, IN
+   \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
+  Developed several new webservices and fixed many bugs in our extant services in role as junior
+  developer. Oversaw release of important cost-tracking feature, and integration with external service
+  Klaviyo. Continuing development support as remote contractor during school year.
+  \vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Team Software Lead} \>Purdue EPICS DRC - ATG \>Fall 2017 \\
                              \>West Lafayette, IN
@@ -39,7 +44,7 @@
 	Led the development of Android application for Purdue EPICS team in Fall Semester 2017. Noticed client need for phone software, proposed the idea, and wrote all code myself
 	using the Android SDK. Worked collaboratively to test and deliver new software before semester's end, and to document program architecture and user manual. The ATG
 	application is a location-aware voice guide designed to assist visually-impaired students in campus navigation.
-	\begin{tabbing}
+	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Assistant} \>Mid-America Homes \>Summers 2016 - 2017 \\
                              \>Nobelsville, IN
@@ -47,24 +52,15 @@
 	Worked as assistant to owner of construction/remodeling business. 
 	Cleared wreckage, removed damaged furniture and appliances, repaired electrical wiring, replaced plumbing. 
 	Managed a small number of sub-contractors and prepared materials invoices and shipment orders. 
-   \begin{tabbing}
-   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
-    {\bf Kitchen Staff} \>Gandolfo's Deli Carmel \>Nov 2015 - Aug 10, 2017 \\
-                          \>Carmel, IN
-   \end{tabbing}\vspace{-20pt}
-	Prepared foodstuffs and maintained kitchen in capacity as daytime staff at deli. 
-	Collaborated with and trained new staff, worked under and with varied management and leadership positions. 
-	Left as the second-longest-tenured employee of Gandolfo’s Deli Carmel, one of only two of the first hires remaining.
 	
-\section{SKILLS AND EXTRACURRICULARS}          
-    Extensive abilities in Java, C++, C, Python, and JavaScript programming languages. \\
-	Proficient in use of SDL and Android API libraries, as well as Git revisioning software and GNUmake and Cmake build tools. \\
+\vspace{-10pt}\section{SKILLS AND EXTRACURRICULARS}          
+	Proficient in use of para-programming tools such as Git, GNUmake, Cmake, GDB, and SBT. \\
 	Knowledge of mathematical and analytical techniques such as finite element analysis, differential modeling. \\
 	Proficient in use of not only standard typesetting and presentation tools such as the MS Office Suite, but advanced tools like \LaTeX, VPython, and MATLAB. \\
 	Writer for satire site \emph{The Purdue Caboose}
  
-\section{HONORS AND AWARDS}          
-    Westfield Honor Roll (8 semesters) \\
+\vspace{-10pt}\section{HONORS AND AWARDS}          
+  Westfield Honor Roll (8 semesters) \\
 	Westfield High School Honored Graduate - 4.2 graduating GPA \\
 	Academic Excellence Award - Debate \\
 	National AP Scholar - Completed 36 credit-hours of college coursework in high school \\
