Update for Fall 2018

--- a/res1.tex
+++ b/res1.tex
@@ -54,18 +54,28 @@
 	Managed a small number of sub-contractors and prepared materials invoices and shipment orders. 
 	
 \vspace{-10pt}\section{SKILLS AND EXTRACURRICULARS}          
+  Programming languages:\\
+  \begin{tabular}{c | c | c}
+    \hline
+    Name & Enjoyment (1-5) & Proficiency (1-5) \\\hline
+    Scala & ++++ & +++ \\
+    Rust & +++++ & +++ \\
+    Java & +++ & ++++ \\
+    C & ++++ & +++ \\
+    C++ & ++++ & ++ \\
+    \hline
+  \end{tabular}\\
 	Proficient in use of para-programming tools such as Git, GNUmake, Cmake, GDB, and SBT. \\
 	Knowledge of mathematical and analytical techniques such as finite element analysis, differential modeling. \\
-	Proficient in use of not only standard typesetting and presentation tools such as the MS Office Suite, but advanced tools like \LaTeX, VPython, and MATLAB. \\
+	Skilled in presentation tools and modeling tools uch as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
 	Writer for satire site \emph{The Purdue Caboose}
  
 \vspace{-10pt}\section{HONORS AND AWARDS}          
-  Westfield Honor Roll (8 semesters) \\
+  Purdue Semester Honor Roll (2 semesters) \\
 	Westfield High School Honored Graduate - 4.2 graduating GPA \\
 	Academic Excellence Award - Debate \\
 	National AP Scholar - Completed 36 credit-hours of college coursework in high school \\
 	Purdue Seminar for Top Engineering Prospects Winning Team \\
- 
- 
+
 \end{resume}
 \end{document}
