--- a/res1.tex
+++ b/res1.tex
@@ -34,7 +34,7 @@
                              \>Indianapolis, IN
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
   Developed several new webservices and fixed many bugs in our extant services in role as junior
-  developer. Oversaw release of important cost-tracking feature, and integration with external service
+  developer. Wrote primarily Scala code, making heavy use of the Play and Lagom frameworks. Oversaw release of important cost-tracking feature, and integration with external service
   Klaviyo. Continuing development support as remote contractor during school year.
   \vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
@@ -66,7 +66,7 @@
     \hline
   \end{tabular}\\
 	Proficient in use of para-programming tools such as Git, GNUmake, Cmake, GDB, and SBT. \\
-	Knowledge of mathematical and analytical techniques such as finite element analysis, differential modeling. \\
+  Knowledge of popular web-stack tools such as the Play Framework, MySQL, Postgres, Docker, and Kubernetes.
 	Skilled in presentation tools and modeling tools uch as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
 	Writer for satire site \emph{The Purdue Caboose}
  
