Update resume with minor wording changes and new GPA

--- a/res1.tex
+++ b/res1.tex
@@ -19,12 +19,12 @@
 \begin{resume}
 
 \vspace{-10pt}\section{JOB OBJECTIVE}          
-	A serious software-engineering position to make use of my skills in performant languages
+	A rigorous software-engineering position making use of my skills in performant languages
   and data management tools. 
 \vspace{-10pt}\section{EDUCATION}          
     Purdue University, West Lafayette, IN \\ 
     Bachelor in Electrical and Computer Engineering, May 2020   \\       
-	GPA: 3.8 \\
+	GPA: 3.6 \\
  
 \vspace{-20pt}\section{EXPERIENCE}
    \vspace{-0.1in}	
@@ -35,7 +35,8 @@
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
   Developed several new webservices and fixed many bugs in our extant services in role as junior
   developer. Wrote primarily Scala code, making heavy use of the Play and Lagom frameworks. Oversaw release of important cost-tracking feature, and integration with external service
-  Klaviyo. Continuing development support as remote contractor during school year.
+  Klaviyo. Continued development support as remote contractor during school year and returned to
+  continue developing product in Summer 2019.
   \vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Team Software Lead} \>Purdue EPICS DRC - ATG \>Fall 2017 \\
@@ -58,15 +59,16 @@
   \begin{tabular}{c | c | c}
     \hline
     Name & Enjoyment (1-5) & Proficiency (1-5) \\\hline
-    Scala & ++++ & +++ \\
-    Rust & +++++ & +++ \\
-    Java & +++ & ++++ \\
+    Scala & ++++ & ++++ \\
+    Rust & +++++ & ++++ \\
+    Python & + & +++ \\
+    Java & +++ & +++ \\
     C & ++++ & +++ \\
     C++ & ++++ & ++ \\
     \hline
   \end{tabular}\\
-	Proficient in use of para-programming tools such as Git, GNUmake, Cmake, GDB, and SBT. \\
-  Knowledge of popular web-stack tools such as the Play Framework, MySQL, Postgres, Docker, and Kubernetes.
+	Proficient in programming tools such as Git, GNUmake, Cmake, GDB, and SBT. \\
+  Knowledge of popular web-stack tools such as the Play Framework, MySQL, Postgres, Docker, Kubernetes, and Hadoop.
 	Skilled in presentation tools and modeling tools uch as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
 	Writer for satire site \emph{The Purdue Caboose}
  
@@ -75,7 +77,7 @@
 	Westfield High School Honored Graduate - 4.2 graduating GPA \\
 	Academic Excellence Award - Debate \\
 	National AP Scholar - Completed 36 credit-hours of college coursework in high school \\
-	Purdue Seminar for Top Engineering Prospects Winning Team \\
+  Purdue Seminar for Top Engineering Prospects Winning Team \\
 
 \end{resume}
 \end{document}
