Update for Spring 2020

--- a/res.tex
+++ b/res.tex
@@ -13,14 +13,15 @@
 \name{JOSEPH A. GERARDOT\\[12pt]}     % the \\[12pt] adds a blank
 				        % line after name      
 
-\address{\bf  PRESENT ADDRESS\\ 1165 West Stadium Avenue \\ West Lafayette IN 47906-4235 }
-\address{\bf PERMANENT ADDRESS \\ 14977 Montclair Drive \\ Westfield, IN, 46074 \\ (317) 363-7700 \\ joseph@gerardot.org/indyjag@gmail.com } 
+%\address{\bf  PRESENT ADDRESS\\ 200 North Street\\ West Lafayette IN 47906-4235 }
+\address{\bf ADDRESS\\ 14977 Montclair Drive \\ Westfield, IN, 46074} 
+\address{\bf CONTACT\\ (317) 363-7700 \\ joseph@gerardot.org/indyjag@gmail.com } 
                                   
 \begin{resume}
 
 \vspace{-10pt}\section{JOB OBJECTIVE}          
-	A rigorous software-engineering position making use of my skills in performant languages
-  and data management tools. 
+	A challenging software-engineering position making use of my skills in designing software services,
+	numerous languages, and data storage solutions. 
 \vspace{-10pt}\section{EDUCATION}          
     Purdue University, West Lafayette, IN \\ 
     Bachelor in Electrical and Computer Engineering, May 2020   \\       
@@ -30,14 +31,15 @@
    \vspace{-0.1in}	
 	\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
-    {\bf Intern} \>DemandJump \>Summer 2018 - Present \\
+    {\bf Intern} \>DemandJump \>Summer 2018 - Spring 2020 \\
                              \>Indianapolis, IN
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
   Developed several new webservices and fixed many bugs in our extant services in role as junior
   developer. Wrote primarily Scala code, making heavy use of the Play and Lagom frameworks. Oversaw release of important cost-tracking feature, and integration with external service
-  Klaviyo. Continued development support as remote contractor during school year and returned to
-  continue developing product in Summer 2019.
-  \vspace{-10pt}\begin{tabbing}
+  Klaviyo. Continued development support as remote contractor during school year, completing several
+	data ingestion pipelines in Python using the Singer architecture and designing the foundational architecture
+	for our new app store.
+	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Team Software Lead} \>Purdue EPICS DRC - ATG \>Fall 2017 \\
                              \>West Lafayette, IN
@@ -54,30 +56,32 @@
 	Cleared wreckage, removed damaged furniture and appliances, repaired electrical wiring, replaced plumbing. 
 	Managed a small number of sub-contractors and prepared materials invoices and shipment orders. 
 	
-\vspace{-10pt}\section{SKILLS AND EXTRACURRICULARS}          
+\vspace{-10pt}\section{SKILLS AND PROFICIENCIES}          
   Programming languages:\\
   \begin{tabular}{c | c | c}
     \hline
     Name & Enjoyment (1-5) & Proficiency (1-5) \\\hline
+    Rust & +++++ & +++++ \\
+    Python & ++ & ++++ \\
+    C & ++++ & ++++ \\
     Scala & ++++ & ++++ \\
-    Rust & +++++ & ++++ \\
-    Python & + & +++ \\
-    Java & +++ & +++ \\
-    C & ++++ & +++ \\
-    C++ & ++++ & ++ \\
+    Java & +++ & ++ \\
+    C++ & ++++ & +++ \\
     \hline
   \end{tabular}\\
-	Proficient in programming tools such as Git, GNUmake, Cmake, GDB, and SBT. \\
-  Knowledge of popular web-stack tools such as the Play Framework, MySQL, Postgres, Docker, Kubernetes, and Hadoop.
-	Skilled in presentation tools and modeling tools uch as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
-	Writer for satire site \emph{The Purdue Caboose}
+	Proficient with obligatory programming tools such as Git, Make, CMake, GDB, SBT, and Cargo. \\
+  Knowledge of popular web-backend tools such as MySQL, Postgres, Docker, Kubernetes, and Terraform.\\
+  	Fairly developed in Linux / general Unix system operation. I run some video game servers with high uptime from my home, with all the accompanying sysops complications.\\
+	Skilled in presentation and modeling tools such as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
+	Writer for college satire site \emph{The Purdue Caboose} \\
+	Volunteer contributor and designer for open-source video game \emph{Veloren}.
  
 \vspace{-10pt}\section{HONORS AND AWARDS}          
-  Purdue Semester Honor Roll (2 semesters) \\
+  Purdue Semester Honor Roll (3 semesters) \\
 	Westfield High School Honored Graduate - 4.2 graduating GPA \\
 	Academic Excellence Award - Debate \\
 	National AP Scholar - Completed 36 credit-hours of college coursework in high school \\
-  Purdue Seminar for Top Engineering Prospects Winning Team \\
+  Purdue Seminar for Top Engineering Prospects Victor \\
 
 \end{resume}
 \end{document}
