Fix spelling of Noblesville

--- a/res.tex
+++ b/res.tex
@@ -50,7 +50,7 @@
 	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Assistant} \>Mid-America Homes \>Summers 2016 - 2017 \\
-                             \>Nobelsville, IN
+                             \>Noblesville, IN
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
 	Worked as assistant to owner of construction/remodeling business. 
 	Cleared wreckage, removed damaged furniture and appliances, repaired electrical wiring, replaced plumbing. 
