--- a/res.tex
+++ b/res.tex
@@ -6,6 +6,7 @@
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 \setlength{\textheight}{9.5in} % increase text height to fit on 1-page 
 \usepackage[bottom=.5in,top=.5in,left=.75in]{geometry}
+\usepackage{comment}
 %\usepackage[compact]{titlesec}
 
 \begin{document} 
@@ -31,7 +32,16 @@
    \vspace{-0.1in}	
 	\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
-    {\bf Intern} \>DemandJump \>Summer 2018 - Spring 2020 \\
+    {\bf Teaching Assistant} \>Purdue University \>Fall 2019 - Present \\
+                             \>West Lafayette, IN
+   \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
+	Educated students on electronic fundamentals as an undergraduate teaching assistant for \textbf{ECE 20700: Introduction to Electronic Measurement}.
+	Led one individual office hour per week, along with assisting during a weekly 2 hour-long lab section.
+	Charged with independently advising students on how to complete the labs and grading their
+	work.
+	\vspace{-10pt}\begin{tabbing}
+   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
+    {\bf Software Engineer Intern} \>DemandJump \>Summer 2018 - Spring 2020 \\
                              \>Indianapolis, IN
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
   Developed several new webservices and fixed many bugs in our extant services in role as junior
@@ -44,9 +54,10 @@
     {\bf Team Software Lead} \>Purdue EPICS DRC - ATG \>Fall 2017 \\
                              \>West Lafayette, IN
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
-	Led the development of Android application for Purdue EPICS team in Fall Semester 2017. Noticed client need for phone software, proposed the idea, and wrote all code myself
+	Led the development of Android application in volunteer capacity for Purdue EPICS team in Fall Semester 2017. Noticed client need for phone software, proposed the idea, and wrote all code myself
 	using the Android SDK. Worked collaboratively to test and deliver new software before semester's end, and to document program architecture and user manual. The ATG
 	application is a location-aware voice guide designed to assist visually-impaired students in campus navigation.
+\begin{comment}
 	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Assistant} \>Mid-America Homes \>Summers 2016 - 2017 \\
@@ -55,7 +66,7 @@
 	Worked as assistant to owner of construction/remodeling business. 
 	Cleared wreckage, removed damaged furniture and appliances, repaired electrical wiring, replaced plumbing. 
 	Managed a small number of sub-contractors and prepared materials invoices and shipment orders. 
-	
+\end{comment}
 \vspace{-10pt}\section{SKILLS AND PROFICIENCIES}          
   Programming languages:\\
   \begin{tabular}{c | c | c}
@@ -71,7 +82,7 @@
   \end{tabular}\\
 	Proficient with obligatory programming tools such as Git, Make, CMake, GDB, SBT, and Cargo. \\
   Knowledge of popular web-backend tools such as MySQL, Postgres, Docker, Kubernetes, and Terraform.\\
-  	Fairly developed in Linux / general Unix system operation. I run some video game servers with high uptime from my home, with all the accompanying sysops complications.\\
+	Fairly developed in Linux / general Unix system operation. (Run some video game servers with high uptime from home, with all the accompanying sysops complications.)\\
 	Skilled in presentation and modeling tools such as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
 	Writer for college satire site \emph{The Purdue Caboose} \\
 	Volunteer contributor and designer for open-source video game \emph{Veloren}.
