--- a/res.tex
+++ b/res.tex
@@ -15,14 +15,14 @@
 				        % line after name      
 
 %\address{\bf  PRESENT ADDRESS\\ 200 North Street\\ West Lafayette IN 47906-4235 }
-\address{\bf ADDRESS\\ 14977 Montclair Drive \\ Westfield, IN, 46074} 
+\address{\bf ADDRESS\\ 17307 Striped Maple Street \\ Westfield, IN, 46074} 
 \address{\bf CONTACT\\ (317) 363-7700 \\ joseph@gerardot.org/indyjag@gmail.com } 
                                   
 \begin{resume}
 
 \vspace{-10pt}\section{JOB OBJECTIVE}          
-	A challenging software-engineering position making use of my skills in designing software services,
-	numerous languages, and data storage solutions. 
+      A challenging and fulfilling software engineering position exercising my skills
+      in functional programming and disciplined software design practices.
 \vspace{-10pt}\section{EDUCATION}          
     Purdue University, West Lafayette, IN \\ 
     Bachelor in Electrical and Computer Engineering, May 2020   \\       
@@ -32,13 +32,25 @@
    \vspace{-0.1in}	
 	\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
+    {\bf Full-Stack Software Engineer} \>Whil / RethinkCare \>May 2021 - Present \\
+                             \>New York, NY
+   \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
+	Developed the full breadth of Whil's (later RethinkCare's) services. Worked primarily
+	with our Scala web backend, using ZIO, Caliban (a GraphQL library for ZIO), and Doobie.
+	In addition, made contributions as necessary to our React Native cross-platform app,
+	being delivered as a SPA and on iOS and Android.
+
+	More notable projects included our complete re-implementation of the Rethink Ed product
+	within the Whil product (Rethink Ed was to be discontinued), and the integration
+	of the RethinkCare product with our custom company-wide SSO system.
+	\begin{tabbing}
+   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Teaching Assistant} \>Purdue University \>Fall 2019 - Present \\
                              \>West Lafayette, IN
    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
 	Educated students on electronic fundamentals as an undergraduate teaching assistant for \textbf{ECE 20700: Introduction to Electronic Measurement}.
 	Led one individual office hour per week, along with assisting during a weekly 2 hour-long lab section.
-	Charged with independently advising students on how to complete the labs and grading their
-	work.
+	Charged with independently advising students on how to complete the labs and grading their work.
 	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Software Engineer Intern} \>DemandJump \>Summer 2018 - Spring 2020 \\
@@ -49,6 +61,7 @@
   Klaviyo. Continued development support as remote contractor during school year, completing several
 	data ingestion pipelines in Python using the Singer architecture and designing the foundational architecture
 	for our new app store.
+\begin{comment} % Cut all the old experience
 	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Team Software Lead} \>Purdue EPICS DRC - ATG \>Fall 2017 \\
@@ -57,7 +70,6 @@
 	Led the development of Android application in volunteer capacity for Purdue EPICS team in Fall Semester 2017. Noticed client need for phone software, proposed the idea, and wrote all code myself
 	using the Android SDK. Worked collaboratively to test and deliver new software before semester's end, and to document program architecture and user manual. The ATG
 	application is a location-aware voice guide designed to assist visually-impaired students in campus navigation.
-\begin{comment}
 	\vspace{-10pt}\begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
     {\bf Assistant} \>Mid-America Homes \>Summers 2016 - 2017 \\
@@ -72,27 +84,24 @@
   \begin{tabular}{c | c | c}
     \hline
     Name & Enjoyment (1-5) & Proficiency (1-5) \\\hline
+    Scala & ++++ & +++++ \\
     Rust & +++++ & +++++ \\
-    Python & ++ & ++++ \\
     C & ++++ & ++++ \\
-    Scala & ++++ & ++++ \\
-    Java & +++ & ++ \\
     C++ & ++++ & +++ \\
+    Python & ++ & ++++ \\
+    Java & +++ & ++ \\
     \hline
   \end{tabular}\\
-	Proficient with obligatory programming tools such as Git, Make, CMake, GDB, SBT, and Cargo. \\
-  Knowledge of popular web-backend tools such as MySQL, Postgres, Docker, Kubernetes, and Terraform.\\
-	Fairly developed in Linux / general Unix system operation. (Run some video game servers with high uptime from home, with all the accompanying sysops complications.)\\
+	Proficient with obligatory programming tools such as Git, Make, GDB, SBT, Cargo and CMake. \\
+   Myriad popular web-backend technologies such as MySQL, Postgres, Docker, Kubernetes, and Terraform.\\
 	Skilled in presentation and modeling tools such as \LaTeX, Pandoc, MATLAB, and GNUplot. \\
-	Writer for college satire site \emph{The Purdue Caboose} \\
-	Volunteer contributor and designer for open-source video game \emph{Veloren}.
+	Volunteer contributor and designer for open-source video game \emph{Veloren}. \\
+	Author of newly developed independent tabletop role-playing game \emph{Fated Hand} (https://www.fatedhand.com)
  
 \vspace{-10pt}\section{HONORS AND AWARDS}          
   Purdue Semester Honor Roll (3 semesters) \\
-	Westfield High School Honored Graduate - 4.2 graduating GPA \\
-	Academic Excellence Award - Debate \\
-	National AP Scholar - Completed 36 credit-hours of college coursework in high school \\
   Purdue Seminar for Top Engineering Prospects Victor \\
+  National AP Scholar - Completed 36 credit-hours of college coursework in high school \\
 
 \end{resume}
 \end{document}
